2004-01-09  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConnection.cs: Data.Init is a bad boy. Lluis realized. He also
	tidied up the end of ReadDone. Disabled relaunching the request if 2
	InitRead are called, since now we don't throw everything into
	RegisterWaitForSingleObject but one request at a time.

	* WebConnectionGroup.cs: when checking available connections, allow them
	not to be Connected but allocated to honor the connection limit.
	
	* WebConnectionStream.cs: CheckComplete() now checks for nextReadCalled
	too. ReadAll don't mess contentLength if it's provided in the headers.

	BIG thanks to Lluis. Turns out that we were debugging the same stuff and
	his Data.Init discovery was THE thing I was missing.

	Fixes bug #51277.

2004-01-09  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ServicePointManager.cs: use GetMaxConnections to get the appropiate
	number of connections limit.

2004-01-09  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* MonoHttpDate.cs: use the invariant culture, not en-US. Suspected
	guilty for bug 52629.

2003-12-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CredentialCache.cs: return null instead of throwing NotImplemented.

2003-12-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWebRequest.cs: fixed checking if method allows a body. Patch by
	Benjamin Jemlich (pcgod@gmx.net).

2003-12-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWebRequest.cs: deal with authentication schemes that have more
	than 1 round trip (Ntlm).

2003-12-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* NtlmClient.cs: new class that actually uses one from Mono.Http to do
	the authentication.

2003-12-02  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWebRequest.cs: when building the redirect URI, use the previous
	one as the base URI, which makes relative URIs work.

2003-12-02  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DigestClient.cs: merged in code from Sebastien Pouliot and Greg